hashmap_basic = executable(
  'hashmap-basic',
  'hashmap/basic.c',
  dependencies: polyvoid)
test('hashmap-basic', hashmap_basic)

hashmap_reallocate = executable(
  'hashmap-reallocate',
  'hashmap/reallocate.c',
  dependencies: polyvoid)
test('hashmap-reallocate', hashmap_reallocate)

list_basic = executable(
  'list-basic',
  'list/basic.c',
  dependencies: polyvoid)
test('list-basic', list_basic)
