hashmap_basic = executable(
  'hashmap_basic',
  'hashmap/basic.c',
  dependencies: polyvoid)
test('hashmap_basic', hashmap_basic)

hashmap_reallocate = executable(
  'hashmap_reallocate',
  'hashmap/reallocate.c',
  dependencies: polyvoid)
test('hashmap_reallocate', hashmap_reallocate)

hashmap_remove = executable(
  'hashmap_remove',
  'hashmap/remove.c',
  dependencies: polyvoid)
test('hashmap_remove', hashmap_remove)

list_basic = executable(
  'list_basic',
  'list/basic.c',
  dependencies: polyvoid)
test('list_basic', list_basic)
